# tusas

./: .gitignore  CITATION.cff  CMakeLists.txt  CMakePresets.json  INSTALL  INSTALL.md  LICENSE.md  Makefile  README.md  buildtusas  tusas.cpp  tusas.h.in  tusas.xml
Test/: CMakeLists.txt  Directory.txt  Instructions.txt  compare.cpp  extra.cpp  run_tusas.cpp
Test/AutoCatalytic/: Gold.e  run_test  tusas.xml
Test/AutoCatalyticT/: Gold.e  run_test  tpetra.xml
Test/CahnHilliardQuadPar/: Gold.e  exofile  mueluOptions.xml  run_test  tusas.xml
Test/CahnHilliardTriQPar/: Gold.e  run_test  tusas.xml
Test/CahnHilliardTriQParT/: Gold.e  exofile  run_test
Test/CoupledStressQuad/: Gold.e  exofile  run_test  tusas.xml
Test/Farzadi/: Gold.e  exofile  farzadi.xml  farzadi_nemesis.xml  mueluOptions.xml  run_test
Test/FarzadiSphere/: exofile  farzadi.xml  run_test  run_test_summit
Test/FullyCoupled/: Gold.e  exofile  fullycoupled.xml  run_test  run_test_summit
Test/Goldak/: Gold.e  GoldSummit.e  exofile  goldak.xml  run_test  run_test_summit
Test/HeatHex/: Gold.e  exofile  run_test  tusas.xml
Test/HeatHexNoPrec/: Gold.e  run_test  tusas.xml
Test/HeatHexQT/: Gold.e  exofile  run_test  test.xml
Test/HeatHexT/: Gold.e  GoldSummit.e  exofile  run_test  run_test_summit  test.xml
Test/HeatQuad/: Gold.e  exofile  run_test  tusas.xml
Test/HeatQuadQ/: Gold.e  exofile  run_test  tusas.xml
Test/HeatQuadQT/: exofile
Test/HeatTet/: Gold.e  exofile  mueluOptions.xml  run_test  tusas.xml
Test/HeatTetQ/: Gold.e  exofile  run_test  tusas.xml
Test/HeatTetQT/: tusas.xml
Test/HeatTetT/: Gold.e
Test/HeatTri/: Gold.e  exofile  run_test  tusas.xml
Test/HeatTriT/: run_test
Test/KKSQuadT/: exofile  kkstest.xml  kkstest_150x15r1.e  mueluOptions.xml  run_test
Test/LinIsoBodyForceHexPrec/: Gold.e  exofile  run_test  tusas.xml
Test/LinIsoHeatHexPar/: Gold.e  run_test  tusas.xml
Test/LinIsoHex/: Gold.e  run_test  tusas.xml
Test/LocalProjectionT/: Gold.e  exofile  run_test  tpetra.xml
Test/NLHeatHexCN/: Gold.e  exofile  mueluOptions.xml  run_test  test.xml
Test/NLHeatHexIMR/: Gold.e  exofile  run_test  test.xml
Test/NeumannHex/: Gold.e  exofile  run_test  tusas.xml
Test/NeumannHexQParT/: Gold.e  exofile  tusas.xml
Test/NeumannQuad/: Gold.e  exofile  tusas.xml
Test/NeumannQuadQPar/: Gold.e  run_test  tusas.xml
Test/NeumannQuadQParT/: Gold.e
Test/NeumannQuadT/: Gold.e  tusas.xml
Test/NeumannTetPar/: Gold.e  exofile  run_test  tusas.xml
Test/NeumannTetQT/: Gold.e  exofile  tusas.xml
Test/NeumannTetT/: Gold.e  run_test  tusas.xml
Test/NeumannTriPar/: Gold.e  run_test  tusas.xml
Test/NeumannTriQ/: Gold.e  run_test  tusas.xml
Test/NeumannTriQT/: tusas.xml
Test/NonlinearLog0D/: Gold.e  quad1.e  run_test  tpetra.xml
Test/PeriodicHexPar/: Gold.e  run_test  tusas.xml
Test/PeriodicQuad/: Gold.e  run_test  tusas.xml
Test/Pfhub2/: exofile  tusas.xml
Test/Pfhub2Split/: exofile  run_test  tusas.xml
Test/PhaseHeatQuad/: Gold.e  exofile  mueluOptions.xml  pfhub3_2d_240x240p2.e  run_test  tusas.xml
Test/PhaseHeatQuadExp/: Gold.e  run_test  tusas.xml
Test/PhaseHeatQuadImp/: Gold.e  exofile  run_test  tusas.xml
Test/PhaseHeatQuadNoPrec/: Gold.e  exofile  run_test  tusas.xml
Test/PhaseHeatQuadPar/: Gold.e  exofile  run_test  tusas.xml
Test/PhaseHeatQuadParNoPrec/: Gold.e  exofile  run_test  tusas.xml
Test/PhaseHeatTris/: Gold.e  pfhub3_2d_120x120tri.e  pfhub3_2d_240x240p2tri.e  run_test  tusas.xml
Test/RadConvBC/: Gold.e  exofile  radconv_3d_200x100p001.e  run_test  run_test_summit  test.xml
Test/RestartFaultT/: Gold.e  exofile  run_test  test.xml
Test/RestartFaultT/decomp/: tusas_nemesis.nemI
Test/RestartFaultT/decomp/1/: tusas_nemesis.par.2.0
Test/RestartFaultT/decomp/2/: tusas_nemesis.par.2.1
Test/RestartFaultT/decomp3/: results.e.2.0
Test/RestartFaultT/decomp5/: results.e.2.1
Test/RestartPar/: .#tusas.xml#  exofile  run_test  tusas.xml
Test/RestartPar/decomp_gold/: nem_spread.inp  results.e.4.0  results.e.4.1  results.e.4.2  results.e.4.3  tusas_nemesis.nemI
Test/RestartPar/decomp_gold/1/: tusas_nemesis.par.4.0
Test/RestartPar/decomp_gold/2/: tusas_nemesis.par.4.1
Test/RestartPar/decomp_gold/3/: tusas_nemesis.par.4.2
Test/RestartPar/decomp_gold/4/: tusas_nemesis.par.4.3
Test/RobinHex/: Gold.e  exofile  run_test  tusas.xml
Test/RobinQuad/: Gold.e  exofile  run_test  tusas.xml
Test/Thermal/: exofile  run_test  test.xml
Test/Tonks1/: Gold.e  mueluOptions.xml  run_test  tonks1.xml
Test/Tonks1kks/: Gold.e  exofile  mueluOptions.xml  run_test  tonks1kks.xml
Test/Uehara1/: Gold.e  exofile  run_test  tusas.xml  ueharatri.e
Test/UnstructuredHex/: Gold.e  exofile  hex64_3d_u.e  run_test  test.xml
Test/WriteSkipDecomp/: Gold.e  run_test  tusas.xml
basis/: Makefile  basis.cpp
basis/include/: basis.hpp
doc/: CMakeLists.txt  Doxyfile  cmake_install.cmake
elem_color/: elem_color.cpp
elem_color/include/: elem_color.h
error_estimator/: error_estimator.cpp
error_estimator/include/: error_estimator.h
extras/: NOX_Thyra_Group.C  decompscript  do-configure  do-configure-cuda  input-ldbl  mkdecompdirs  mkdecompfiles  nem_spread.inp
input/: Makefile  ReadInput.cpp
input/include/: ParamNames.h  ReadInput.h
mesh/: Makefile  Mesh.C
mesh/include/: Mesh.h
meshes/: dendquad300.e  dendquad300_h.e  dendquad300_q.e  dendquad600_q.e  farzadiQuad125x45_mmr.e  farzadi_40x40x40_1p25_s50.e  fc_1d_200.e  fc_verification_goldak.e  hex512.e  hex64.e  hex64_3d.e  hex8.e  hexQ64_3d.e  pfhub2_64.e  pfhub3_2d_120x120quad.e  quad16.e  quad256.e  quad4.e  quad4_3d.e  quad64.e  quadQ256.e  tet_384.e  tet_479.e  tet_Q384.e  tonks1_quad_1x300.e  tri24.e  tri384.e  tri96.e  triQ96.e
periodic_bc/: periodic_bc.cpp
periodic_bc/include/: periodic_bc.h
post_process/: post_process.cpp
post_process/include/: post_process.h
preconditioner/: Makefile
projection/: interpflux.cpp  interpfluxavg.cpp  projection.cpp
random_distribution/: random_distribution.cpp
timestep/: Makefile  timestep.cpp
(+24 files in other folders)
